<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TelaEntrar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".TelaEntrar"
    tools:layout_editor_absoluteX="-2dp"
    tools:layout_editor_absoluteY="24dp">

    <ImageView
        android:id="@+id/Chapeu2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="136dp"
        android:src="@drawable/chapeu"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/InfoTelaInicial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="392dp"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="393dp"
        android:fontFamily="@font/poppins_black"
        android:text="@string/Info_TelaEntrar"
        android:textColor="@color/blue"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/Chapeu1"
        android:layout_width="259dp"
        android:layout_height="539dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="151dp"
        android:layout_marginBottom="497dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/chapeu" />

    <EditText
        android:id="@+id/NomeUsuario"
        android:layout_width="320dp"
        android:layout_height="47dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="568dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="299dp"
        android:ems="10"
        android:hint="@string/Email_Usuario"
        android:inputType="text"
        android:textColorHint="@color/blue"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/SenhaUsuario"
        android:layout_width="317dp"
        android:layout_height="48dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="631dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="235dp"
        android:ems="10"
        android:hint="@string/Senha_Usuario"
        android:inputType="textPassword"
        android:textColorHint="@color/blue"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginTop="705dp"
        android:layout_marginEnd="231dp"
        android:layout_marginBottom="190dp"
        android:text="@string/Esqueceu_Senha"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/BotaoEntrarApp"
        android:layout_width="141dp"
        android:layout_height="52dp"
        android:layout_marginStart="225dp"
        android:layout_marginTop="809dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="53dp"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/nunito_extrabold"
        android:onClick="Entrar"
        android:text="@string/Entrar"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>