<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaMateriais">

    <ImageButton
        android:id="@+id/btnInicio3"
        android:layout_width="94dp"
        android:layout_height="82dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="816dp"
        android:layout_marginEnd="290dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/baseline_house_24"
        android:backgroundTint="@color/snow"
        android:onClick="NavegarMenu"
        android:src="@drawable/baseline_house_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/baseline_house_24" />

    <View
        android:id="@+id/line4"
        android:layout_width="410dp"
        android:layout_height="5dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="802dp"
        android:layout_marginBottom="107dp"
        android:background="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nomeAPP3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="263dp"
        android:layout_marginBottom="863dp"
        android:fontFamily="@font/poppins_extrabold"
        android:text="@string/app_name"
        android:textColor="@color/blue"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/line5"
        android:layout_width="410dp"
        android:layout_height="5dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="65dp"
        android:layout_marginBottom="844dp"
        android:background="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnVestbular3"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="165dp"
        android:layout_marginTop="823dp"
        android:layout_marginEnd="166dp"
        android:layout_marginBottom="11dp"
        android:background="@color/white_2"
        android:onClick="NavegarVestibulares"
        android:rotation="0"
        android:rotationX="0"
        android:rotationY="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/vestibulares_icon1" />

    <ImageButton
        android:id="@+id/btnMateriais3"
        android:layout_width="86dp"
        android:layout_height="81dp"
        android:layout_marginStart="296dp"
        android:layout_marginTop="822dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="11dp"
        android:background="@color/white_2"
        android:onClick="NavegarMateriais"
        android:rotation="0"
        android:rotationX="0"
        android:rotationY="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/materiais_icon1" />

    <TextView
        android:id="@+id/txtVestibulares3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginTop="888dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="4dp"
        android:shadowColor="@color/blue"
        android:text="@string/Vestibulares"
        android:textColor="@color/blue"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtMateriais3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="306dp"
        android:layout_marginTop="888dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="4dp"
        android:text="@string/Materiais"
        android:textColor="@color/blue"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtInicio3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="889dp"
        android:layout_marginEnd="306dp"
        android:layout_marginBottom="6dp"
        android:text="@string/Inicio"
        android:textColor="@color/blue"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="721dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="71dp"
        android:layout_marginBottom="122dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgLivros"
            android:layout_width="match_parent"
            android:layout_height="265dp"
            android:onClick="Livros"
            app:srcCompat="@drawable/livros" />

        <TextView
            android:id="@+id/txtLivros"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Livros"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/imgGabarito"
            android:layout_width="match_parent"
            android:layout_height="293dp"
            android:onClick="Gabaritos"
            app:srcCompat="@drawable/gabarito" />

        <TextView
            android:id="@+id/txtGabarito"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Gabaritos"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/imgVideos"
            android:layout_width="match_parent"
            android:layout_height="293dp"
            android:onClick="Videos"
            app:srcCompat="@drawable/videos" />

        <TextView
            android:id="@+id/txtVideos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Videos"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="24sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>