<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaVestibulares">

    <ImageView
        android:id="@+id/imgFuvest"
        android:layout_width="379dp"
        android:layout_height="270dp"
        app:srcCompat="@drawable/fuvest"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="432dp" />

    <ImageButton
        android:id="@+id/btnInicio2"
        android:layout_width="94dp"
        android:layout_height="82dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="816dp"
        android:layout_marginEnd="290dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/baseline_house_24"
        android:backgroundTint="@color/snow"
        android:onClick="NavegarMenu"
        android:src="@drawable/baseline_house_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/baseline_house_24" />

    <View
        android:id="@+id/line"
        android:layout_width="410dp"
        android:layout_height="5dp"
        android:background="@color/blue"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="802dp" />

    <TextView
        android:id="@+id/nomeAPP2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="263dp"
        android:layout_marginBottom="863dp"
        android:fontFamily="@font/poppins_extrabold"
        android:text="@string/app_name"
        android:textColor="@color/blue"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/line2"
        android:layout_width="410dp"
        android:layout_height="5dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="65dp"
        android:layout_marginBottom="844dp"
        android:background="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSite"
        android:layout_width="98dp"
        android:layout_height="61dp"
        android:layout_marginStart="149dp"
        android:layout_marginEnd="164dp"
        android:layout_marginBottom="120dp"
        android:backgroundTint="@color/blue"
        android:onClick="Fuvest"
        android:text="@string/Site"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnSite2"
        android:layout_width="98dp"
        android:layout_height="61dp"
        android:layout_marginStart="147dp"
        android:layout_marginTop="357dp"
        android:layout_marginEnd="166dp"
        android:layout_marginBottom="496dp"
        android:backgroundTint="@color/blue"
        android:onClick="Enem"
        android:text="@string/Site"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtEnem"
        android:layout_width="354dp"
        android:layout_height="62dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="294dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="558dp"
        android:text="@string/Enem"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnDatas"
        android:layout_width="100dp"
        android:layout_height="62dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="732dp"
        android:layout_marginEnd="284dp"
        android:layout_marginBottom="120dp"
        android:backgroundTint="@color/blue"
        android:onClick="Pesquisar"
        android:text="@string/Datas"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnDatas2"
        android:layout_width="100dp"
        android:layout_height="62dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="357dp"
        android:layout_marginEnd="283dp"
        android:layout_marginBottom="495dp"
        android:backgroundTint="@color/blue"
        android:onClick="Pesquisar"
        android:text="@string/Datas"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnDescricao"
        android:layout_width="123dp"
        android:layout_height="62dp"
        android:layout_marginStart="260dp"
        android:layout_marginTop="356dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="496dp"
        android:backgroundTint="@color/blue"
        android:onClick="Pesquisar"
        android:text="@string/Descricao"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnVestbular2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="165dp"
        android:layout_marginTop="823dp"
        android:layout_marginEnd="166dp"
        android:layout_marginBottom="11dp"
        android:background="@color/white_2"
        android:onClick="NavegarVestibulares"
        android:rotation="0"
        android:rotationX="0"
        android:rotationY="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/vestibulares_icon1" />

    <ImageButton
        android:id="@+id/btnMateriais2"
        android:layout_width="86dp"
        android:layout_height="81dp"
        android:layout_marginStart="296dp"
        android:layout_marginTop="822dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="11dp"
        android:background="@color/white_2"
        android:rotation="0"
        android:rotationX="0"
        android:rotationY="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/materiais_icon1" />

    <TextView
        android:id="@+id/txtVestibulares2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginTop="888dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="4dp"
        android:shadowColor="@color/blue"
        android:text="@string/Vestibulares"
        android:textColor="@color/blue"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtMateriais2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="306dp"
        android:layout_marginTop="888dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="4dp"
        android:text="@string/Materiais"
        android:textColor="@color/blue"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtInicio2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="889dp"
        android:layout_marginEnd="306dp"
        android:layout_marginBottom="6dp"
        android:text="@string/Inicio"
        android:textColor="@color/blue"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="379dp"
        android:layout_height="270dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="593dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/enem" />

    <TextView
        android:id="@+id/txtFuvest"
        android:layout_width="354dp"
        android:layout_height="62dp"
        android:text="@string/Fuvest"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textSize="22sp"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="670dp" />

    <Button
        android:id="@+id/btnDescricao2"
        android:layout_width="123dp"
        android:layout_height="62dp"
        android:backgroundTint="@color/blue"
        android:onClick="Pesquisar"
        android:text="@string/Descricao"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="260dp"
        tools:layout_editor_absoluteY="732dp" />
</androidx.constraintlayout.widget.ConstraintLayout>